--- a/landingpage/landingpage.css
+++ b/landingpage/landingpage.css
@@ -1,21 +1,3 @@
-/* .page-wrapper {
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto 1fr auto;
-  grid-template-areas:
-    "header header"
-    "main main"
-    "footer footer";
-}
-header {
-  grid-area: header;
-}
-main {
-  position: relative;
-  grid-area: main;
-}
-footer {
-  grid-area: footer;
-} */
 .slideshow-container {
   position: relative;
   top: 1rem;
